--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Best App for the University to manage the Leave and Outing of the Students">
     <meta name="author" content="barcode based leave">
+    <meta name="google-site-verification" content="IFNzZmUQBy7CGql50c-QN6YTlkT61ggSLPlHlorc7JU" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
