--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Best App for the University to manage the Leave and Outing of the Students">
-    <meta name="author" content="barcode based leave">
+    <meta name="author" content="Sai Ganesh">
     <meta name="google-site-verification" content="IFNzZmUQBy7CGql50c-QN6YTlkT61ggSLPlHlorc7JU" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="bblo.com" content="" /> <!-- website link -->
+	<meta property="og:site_name" content="ID Card Sanner" /> <!-- website name -->
+	<meta property="bblo.com" content="https://idcardscan.netlify.app/" /> <!-- website link -->
 	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
 	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
