--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Best App for the University to manage the Leave and Outing of the Students <a href="saga.jpg">Download</a>">
+    <meta name="description" content="Best App for the University to manage the Leave and Outing of the Students">
     <meta name="author" content="Sai Ganesh">
     <meta name="google-site-verification" content="IFNzZmUQBy7CGql50c-QN6YTlkT61ggSLPlHlorc7JU" />
 
@@ -52,7 +52,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Leno</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="images/icon.png" style="height: 60px; width: 50px;"></a> 
+        <a class="navbar-brand logo-image" href="index.html"><img src="images/icon.png" style="height: 50px; width: 40px;"></a> 
         
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
