--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                     <div class="footer-col last">
                         <h4>Social Media</h4>
                         <span class="fa-stack">
-                            <a href="https://www.instagram.com/im_saigana/" target="_blank">
+                            <a href="https://www.facebook.com/kallepalli.saiganesh" target="_blank">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
@@ -818,13 +818,13 @@
                             </a>
                         </span>                     
                         <span class="fa-stack">
-                            <a href="https://www.instagram.com/sklm_rash_rider_/" target="_blank">
+                            <a href="https://www.instagram.com/im_saigana/" target="_blank">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="https://www.instagram.com/im_saigana/" target="_blank">
+                            <a href="https://www.linkedin.com/in/sai-ganesh-kallepalli-26b4b2197/" target="_blank">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-linkedin-in fa-stack-1x"></i>
                             </a>
