--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                             <img class="img-fluid" src="images/header-iphone.png" alt="alternative">
                         </div> <!-- end of image-container -->
 
-                        <div id="sfcz1gyxemkn431j6zbjakl5cflzzshq88n"></div><script type="text/javascript" src="https://counter6.stat.ovh/private/counter.js?c=z1gyxemkn431j6zbjakl5cflzzshq88n&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="website counters"><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=z1gyxemkn431j6zbjakl5cflzzshq88n" border="0" title="website counters" alt="website counters"></a></noscript>
-                        
+                        <div id="sfcz1gyxemkn431j6zbjakl5cflzzshq88n"></div><script type="text/javascript" src="https://counter6.stat.ovh/private/counter.js?c=z1gyxemkn431j6zbjakl5cflzzshq88n&down=async" async></script><noscript><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=z1gyxemkn431j6zbjakl5cflzzshq88n" border="0" title="website counters" alt="website counters"></a></noscript>
+
 
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
