--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                             <img class="img-fluid" src="images/header-iphone.png" alt="alternative">
                         </div> <!-- end of image-container -->
 
-                        <div id="sfcz1gyxemkn431j6zbjakl5cflzzshq88n"></div><script type="text/javascript" src="https://counter6.stat.ovh/private/counter.js?c=z1gyxemkn431j6zbjakl5cflzzshq88n&down=async" async></script><noscript><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=z1gyxemkn431j6zbjakl5cflzzshq88n" border="0" title="website counters" alt="website counters"></a></noscript>
-
+                        
 
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -834,8 +833,9 @@
                                 <i class="fab fa-linkedin-in fa-stack-1x"></i>
                             </a>
                         </span>
-                    </div> 
+                    </div>
                 </div> <!-- end of col -->
+                <a href="https://www.freecounterstat.com" title="hit counter html code"><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=7kd5jjrfdwm2rk3b3lqh8cc8qmm9by7t" border="0" title="hit counter html code" alt="hit counter html code"></a> 
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
