--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                         </span>
                     </div>
                 </div> <!-- end of col -->
-                <a href="https://www.freecounterstat.com" title="hit counter html code"><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=7kd5jjrfdwm2rk3b3lqh8cc8qmm9by7t" border="0" title="hit counter html code" alt="hit counter html code"></a> 
+                <div><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=7kd5jjrfdwm2rk3b3lqh8cc8qmm9by7t" border="0" title="hit counter html code" alt="hit counter html code"></a> </div>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
