--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                             <p class="testimonial-text">
                                             	
                                             </p>
-                                            <p class="testimonial-author">I.Aravindh - Frontend Designer</p>
+                                            <p class="testimonial-author">I.Aravindh - Frontend and Backend Devloper</p>
                                         </div>
                                     </div>        
                                 </div> <!-- end of swiper-slide -->
