--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="#your-link" target="_blank"> 
+                    <a href="app-release.apk"> 
                         <i class="fas fa-download fa-stack-2x"></i>
                     </a>
                 </span>
@@ -98,7 +98,7 @@
                         <div class="text-container">
                             <h1>MOBILE APP FOR</h1><span id="js-rotating" font-size="40px">"THE UNIVERSITY TO MAINTAIN THE LEAVE AND OUTING"</span>
                             <p class="p-large">Our App will reduce your burden and saves time, Download it today!</p>
-                            <a class="btn-solid-lg page-scroll" href="#your-link" target="_blank"><i class="fas fa-download"></i></i> &nbsp;Download</a>
+                            <a class="btn-solid-lg page-scroll" href="app-release.apk"><i class="fas fa-download"></i></i> &nbsp;Download</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -688,7 +688,7 @@
                     <div class="text-container">
                         <h2>Download <span class="blue">Our App</span></h2>
                         <p class="p-large">to reduce your effort</p>
-                        <a class="btn-solid-lg" href="#your-link"><i class="fas fa-download"></i>DOWNLOAD</a>
+                        <a class="btn-solid-lg" href="app-release.apk"><i class="fas fa-download"></i>DOWNLOAD</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -801,7 +801,7 @@
                 </div> <!-- end of col -->
                 <div class="col-md-4">
                     <div class="footer-col middle">
-                        <h4><a class="turquoise" href="https://www.instagram.com/im_saigana/">DOWNLOAD</a></h4>
+                        <h4><a class="turquoise" href="app-release.apk">DOWNLOAD</a></h4>
                          </div>
                     </div>         
                 <div class="col-md-4">
@@ -846,7 +846,7 @@
             <div class="row">
                 <div class="col-lg-12">
                 	<p><div><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=7kd5jjrfdwm2rk3b3lqh8cc8qmm9by7t" border="0" title="hit counter html code" alt="hit counter html code"></a> </div></p>
-                    <p class="p-small">Copyright © Team Vikings</p>
+                    <p class="p-small"> © Team Vikings | 2021</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
