--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="app-release.apk"> 
+                    <a href="IDCardScanner.apk"> 
                         <i class="fas fa-download fa-stack-2x"></i>
                     </a>
                 </span>
@@ -98,7 +98,7 @@
                         <div class="text-container">
                             <h1>MOBILE APP FOR</h1><span id="js-rotating" font-size="40px">"THE UNIVERSITY TO MAINTAIN THE LEAVE AND OUTING"</span>
                             <p class="p-large">Our App will reduce your burden and saves time, Download it today!</p>
-                            <a class="btn-solid-lg page-scroll" href="app-release.apk"><i class="fas fa-download"></i></i> &nbsp;Download</a>
+                            <a class="btn-solid-lg page-scroll" href="IDCardScanner.apk"><i class="fas fa-download"></i></i> &nbsp;Download</a>
                         </div>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -677,7 +677,7 @@
                     <div class="text-container">
                         <h2>Download <span class="blue">Our App</span></h2>
                         <p class="p-large">to reduce your effort</p>
-                        <a class="btn-solid-lg" href="app-release.apk"><i class="fas fa-download"></i>DOWNLOAD</a>
+                        <a class="btn-solid-lg" href="IDCardScanner.apk"><i class="fas fa-download"></i>DOWNLOAD</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -790,7 +790,7 @@
                 </div> <!-- end of col -->
                 <div class="col-md-4">
                     <div class="footer-col middle">
-                        <h4><a class="turquoise" href="app-release.apk">DOWNLOAD</a></h4>
+                        <h4><a class="turquoise" href="IDCardScanner.apk">DOWNLOAD</a></h4>
                          </div>
                     </div>         
                 <div class="col-md-4">
